# dualsub

./: .gitignore  README.md  pyproject.toml
examples/: sample.es.srt
src/dualsub/: ass.py  audio.py  cli.py  dual.py  progress.py  srt.py  tokenize.py  transcribe.py  translate.py  vocab.py
src/dualsub/data/: progress.lua
tests/: test_features.py  test_progress.py  test_srt.py
