[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dualsub"
version = "0.1.0"
description = "Universal video transcription and dual-language subtitle generator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "groq>=0.11",
    "deep-translator>=1.11",
    "tqdm>=4.66",
    "wordfreq>=3.0",
    "yt-dlp>=2024.1",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.1"]
align = ["whisperx>=3.1"]
dev = ["pytest>=8"]

[project.scripts]
dualsub = "dualsub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
